applications/pelican/envs/preview/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pelican
spec:
  ingressClassName: cilium
  rules:
    - host: &host <preview>.services.sbling.net
      http:
        paths:
          - backend:
              service:
                name: wallabag
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
